--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,6 +1,7 @@
 ########### install files ###############
 #
 #
-kde4_create_handbook(index.docbook INSTALL_DESTINATION ${HTML_INSTALL_DIR}/en SUBDIR amor)
-kde4_create_manpage(man-amor.6.docbook 6 INSTALL_DESTINATION ${MAN_INSTALL_DIR})
+#kde4_create_handbook(index.docbook INSTALL_DESTINATION ${HTML_INSTALL_DIR}/en SUBDIR amor)
+#kde4_create_manpage(man-amor.6.docbook 6 INSTALL_DESTINATION ${MAN_INSTALL_DIR})
 
+kdoctools_create_handbook(index.docbook INSTALL_DESTINATION ${HTML_INSTALL_DIR}/en SUBDIR amor)
