main.cpp should be quite OK now

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,6 +26,7 @@ target_link_libraries( amor
     KF5::Crash
     KF5::I18n
     KF5::TextWidgets
+    KF5::CoreAddons
 )
 
 install( TARGETS amor  ${INSTALL_TARGETS_DEFAULT_ARGS} )
