--- a/data/icons/CMakeLists.txt
+++ b/data/icons/CMakeLists.txt
@@ -1,2 +1,3 @@
-ecm_install_icons(${KDE_INSTALL_ICONDIR})
+ecm_install_icons( ICONS 16-apps-amor.png 22-apps-amor.png 32-apps-amor.png 48-apps-amor.png
+                   DESTINATION ${KDE_INSTALL_ICONDIR})
 
