--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ find_package(KF5 ${KF5_MIN_VERSION} REQUIRED
     WindowSystem
     XmlGui
     IconThemes
+    DBusAddons
 )
 
 #include( KDE4Defaults )
